<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Delivery Sloth</string>
    <string name="login">Identifiant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="Login">Identifiant</string>
	<string name="Password">Mot de passe</string>
	<string name="Envoyer">Connexion</string>
	<string name="ShowPassWord">Cacher le mot de passe</string>
	<string name="Appeler">Appeler</string>
	<string name="EnvoyerSms">Envoyer SMS</string>
	<string name="SaveData">Rester connecté</string>
	<string name="ListProduits">Voir le détail des produits</string>
	<string name="ValiderProduit">Valider</string>
	
	
</resources>
