<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="10dp" >   
    
	<ImageView
	   android:layout_width="100dp"
	   android:layout_height="100dp"
	   android:id="@+id/imageView"
	   android:src="@drawable/sloth2"
	   android:layout_gravity="center" />
	
	<EditText
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:id="@+id/Login"
	   android:hint="@string/Login"
	   android:focusable="true"
	   android:textColorHighlight="@color/darkGrey"
	   android:textColorHint="@color/darkGrey"
	   android:layout_below="@+id/imageView"
	   android:layout_marginTop="10dp"
	   android:layout_centerVertical="true"
	   android:layout_centerHorizontal="true" />
	   
	
	<EditText
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:inputType="textPassword"
	   android:ems="10"
	   android:id="@+id/Password"
	   android:layout_below="@+id/Login"
	   android:layout_alignParentLeft="true"
	   android:layout_alignParentStart="true"
	   android:layout_alignRight="@+id/Login"
	   android:layout_alignEnd="@+id/Login"
	   android:textColorHighlight="@color/darkGrey"
	   android:textColorHint="@color/darkGrey"
	   android:hint="@string/Password" />
	<CheckBox
	   android:id="@+id/ShowPassWord"
	   android:layout_height="wrap_content"
	   android:layout_below="@+id/Password"
	   android:layout_alignParentLeft="true"
	   android:layout_alignParentStart="true"
	   android:text="@string/ShowPassWord"
	   android:layout_width="fill_parent"
	   android:checked="true">
	</CheckBox>
   
	<CheckBox
	   android:id="@+id/SaveData"
	   android:layout_height="wrap_content"
	   android:layout_below="@+id/Password"
	   android:layout_alignParentLeft="true"
	   android:layout_alignParentStart="true"
	   android:text="@string/SaveData"
	   android:layout_width="fill_parent"
	   android:checked="true">
	</CheckBox>
	
	<Button
	   android:id="@+id/Envoyer"
	   android:layout_centerVertical="true"
	   android:layout_centerHorizontal="true"
	   android:layout_alignParentBottom="true"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:background="@color/darkGreen"
	   android:textColor="@color/white"
	   android:text="@string/Envoyer"/>
   
<!--     <LinearLayout -->
<!--         android:layout_width="fill_parent" -->
<!--         android:orientation="vertical" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:gravity="center_vertical|center_horizontal"> -->
        
<!-- 		 <EditText -->
<!-- 		    android:id="@+id/Login" -->
<!-- 		    android:layout_height="wrap_content" -->
<!-- 		    android:hint="@string/Login" -->
<!-- 		    android:layout_width="fill_parent"> -->
<!-- 		</EditText> -->
<!-- 		<EditText -->
<!-- 		    android:id="@+id/Password" -->
<!-- 		    android:layout_height="wrap_content" -->
<!-- 		    android:hint="@string/Password" -->
<!-- 		    android:layout_width="fill_parent" -->
<!-- 		    android:inputType= "textPassword"> -->
<!-- 		</EditText> -->
<!-- 		<CheckBox -->
<!-- 		    android:id="@+id/ShowPassWord" -->
<!-- 		    android:layout_height="wrap_content" -->
<!-- 		    android:text="@string/ShowPassWord" -->
<!-- 		    android:layout_width="fill_parent" -->
<!-- 		    android:checked="true"> -->
<!-- 		</CheckBox> -->
		
<!-- 		<Button -->
<!--         android:id="@+id/Envoyer" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/Envoyer"/> -->
 
<!--     </LinearLayout> -->
    <TextView
        android:id = "@+id/JsonTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
</ScrollView>
